compiler/tests/fixtures/invalid/semantics/query_exactly_multiple_operands.viv
// Invalid: query exactly with multiple operands in singular field

action fight:
    roles:
        @fighter:
            as: initiator

query bad-exactly:
    roles:
        @witness:
            as: character
    action:
        any: fight
    location:
        exactly: @witness.home, @witness.work
